# textery

./: .dockerignore  .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  CHANGELOG.md  README.md  coverage_rest.xml  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/adapters/db/: alembic.ini
backend/adapters/db/migrations/: env.py
backend/adapters/db/migrations/versions/: 0f1a2b3c4d5e_oauth_tables.py  1a2b3c4d5e6f_oauth_rate_limits.py  a1b2c3d4e5f6_add_error_message_column.py  a7b8c9d0e1f2_documents_table.py  b2c3d4e5f6a7_add_version_column.py  b8c9d0e1f2a3_generations_owner_id.py  c3d4e5f6a7b8_index_generations_status.py  c8ed82e70d3e_generations_table_with_content.py  c9d0e1f2a3b4_history_keyset_indexes.py  d0e1f2a3b4c5_generations_document_type_check.py  d4e5f6a7b8c9_accounts_table.py  e1f2a3b4c5d6_generations_updated_at.py  e5f6a7b8c9d0_verification_codes_table.py  f6a7b8c9d0e1_accounts_email_unique.py  f7b8c9d0e1a2_accounts_failed_attempt_count.py
backend/adapters/db/src/: session.py
backend/adapters/db/src/access/: affected_rows.py  keyset_pagination.py
backend/adapters/db/tests/: conftest.py
backend/adapters/db/tests/access/: test_history_paging.py
backend/adapters/db/tests/session/: test_sql_alchemy_unit_of_work.py
backend/adapters/db/tests/statements/: account_concurrency_statements.py  account_row_lookup.py  account_storage_statements.py  account_to_domain_roundtrip_statements.py  database_cleanup.py  document_storage_statements.py  failed_attempt_concurrency_statements.py  generation_storage_statements.py  history_paging_statements.py  resend_concurrency_statements.py  resend_ordering_statements.py  reset_failed_attempts_statements.py  sql_alchemy_unit_of_work_statements.py  verification_code_concurrency_statements.py  verification_code_storage_statements.py
backend/adapters/generation_provider/src/provider/: fake_provider.py  gigachat_provider.py
backend/adapters/generation_provider/tests/: conftest.py
backend/adapters/generation_provider/tests/provider/: gigachat_fixtures.py  test_fake_provider.py  test_gigachat_provider.py  (+2 more)
backend/adapters/rest/tests/: conftest.py
backend/adapters/security/tests/: conftest.py
backend/application/src/app/: container.py  main.py
backend/application/tests/: conftest.py  test_login_wiring.py  test_resend_wiring.py
backend/domain/src/auth/: account.py  email.py  handoff_code.py  oauth_identity.py  oauth_state.py  password.py  verification_code.py  verification_code_value.py
backend/domain/src/document/: document.py  document_content.py  document_type.py  idempotency_key.py
backend/domain/src/generation/: generation.py
backend/domain/src/shared/: exceptions.py  keyset_cursor.py  page.py
backend/domain/tests/: conftest.py
backend/domain/tests/auth/: test_account.py  test_email.py  test_handoff_code.py  test_oauth_identity.py  test_oauth_state.py  test_password.py  test_password_normalization_order.py  test_verification_code.py  test_verification_code_value.py
backend/domain/tests/document/: test_document.py  test_document_value_objects.py
backend/domain/tests/generation/: test_generation.py
backend/domain/tests/shared/: test_keyset_cursor.py  test_page.py
backend/usecase/src/adapters/: generation_provider.py  generation_queue.py  generation_storage.py
backend/usecase/src/auth/: account_repository.py  email_validation.py  login_user.py  password_hasher.py  refresh_access_token.py  register_user.py  registration_result.py  resend_code.py  token_pair.py  token_service.py  verification_code_repository.py  verify_account.py
backend/usecase/src/document/: create_document.py  document_creation_result.py  document_repository.py  get_document.py  html_sanitizer.py  list_documents.py  save_document.py
backend/usecase/src/generation/: document_generator.py  generate_document.py  generation_provider.py  generation_queue.py  generation_storage.py  get_generation.py  list_generations.py  request_generation.py  requeue_stale_generations.py
backend/usecase/src/shared/: clock.py  rollback.py  unit_of_work.py
backend/usecase/tests/: conftest.py
backend/usecase/tests/auth/: test_login_failed_attempt_usecase.py  test_login_lockout_usecase.py  test_login_usecase.py  test_refresh_access_token_usecase.py  test_register_account_persistence_usecase.py  test_register_atomic_write_usecase.py  test_register_duplicate_email_usecase.py  test_register_email_normalization_usecase.py  test_register_password_confirmation_usecase.py  test_register_password_normalization_usecase.py  test_register_password_policy_usecase.py  test_register_usecase.py  test_register_verification_code_usecase.py  test_resend_code_lock_usecase.py  test_resend_code_usecase.py  test_resend_verified_usecase.py  test_verify_account_already_verified_usecase.py  test_verify_account_atomic_transition_usecase.py  test_verify_account_idempotency_usecase.py  test_verify_account_rejection_usecase.py  test_verify_account_usecase.py
backend/usecase/tests/document/: test_create_document_usecase.py  test_read_document_usecases.py  test_save_document_usecase.py
backend/usecase/tests/generation/: test_generation_lifecycle_usecase.py  test_generation_usecase.py  test_read_generation_usecases.py  test_requeue_stale_generations_usecase.py
backend/usecase/tests/scope/: generation_request_scope.py  register_request_scope.py
backend/usecase/tests/statements/: arranged.py  document_fakes.py  generation_lifecycle_statements.py  generation_statements.py  login_failed_attempt_statements.py  login_lockout_statements.py  login_statements.py  refresh_statements.py  register_atomic_write_statements.py  register_base.py  register_statements.py  requeue_stale_generations_statements.py  resend_code_assertions.py  resend_code_lock_statements.py  resend_code_statements.py  resend_verified_statements.py  verify_account_already_verified_statements.py  verify_account_atomic_transition_statements.py  verify_account_base.py  verify_account_failure_statements.py  verify_account_idempotency_statements.py  verify_account_statements.py
(+819 files in other folders)
