[project]
name = "textery-backend"
version = "0.1.0"
description = "Textery backend — FastAPI, Clean Architecture (domain → usecase → adapters → application)."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# --- Test runner -------------------------------------------------------------
# `pythonpath` replaces the hand-rolled `sys.path.insert` bootstrap every
# conftest used to carry. The layer roots are listed inner-first, which is also
# the dependency direction: a module can only import what is genuinely below it.
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "domain/src",
    "usecase/src",
    "adapters/rest/src",
    "adapters/db/src",
    "adapters/security/src",
    "adapters/generation_provider/src",
    "adapters/oauth_provider/src",
    "application/src/app",
    # Test-support roots, for the `statements` test-DSL packages. The two
    # `statements` directories carry no `__init__.py`, so they merge into one
    # implicit namespace package rather than shadowing each other.
    "domain/tests",
    "usecase/tests",
    "adapters/db/tests",
    "adapters/rest/tests",
    "adapters/security/tests",
    "adapters/generation_provider/tests",
    "adapters/generation_provider/tests/provider",
]

# --- Linter / formatter ------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["adapters/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "SIM", "UP", "ARG"]
ignore = [
    # FastAPI's whole dependency-injection idiom is a call in a default argument
    # (`Depends(...)`, `Header(...)`). B008 exists for mutable defaults; these are
    # neither mutable nor evaluated per request in a way that surprises anyone.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# The composition root imports only after it has put the layer roots on sys.path.
# ARG001: the lifespan callback's `app` parameter is Starlette's signature, not ours.
"application/src/app/main.py" = ["E402", "ARG001"]
# ARG001: `request` is Starlette's exception-handler signature. The handlers that
# only log the method and path still have to accept the whole object.
"adapters/rest/src/error_handling/exception_handlers.py" = ["ARG001"]
# ARG002: FakeProvider implements the GenerationProvider port. Ignoring the
# generation it is handed is exactly what makes it a fake.
"adapters/generation_provider/src/provider/fake_provider.py" = ["ARG002"]
# ARG002: AllowAllRateLimiter is the null object for the RateLimiter port. It
# never throttles, so ignoring the bucket key and the clock is its whole
# definition -- narrowing the signature would break the port instead.
"usecase/src/auth/oauth/rate_limiter.py" = ["ARG002"]
# Test doubles implement production ports, and SQLAlchemy event hooks have a
# fixed five-argument shape; an unused argument in either is the signature doing
# its job, not an oversight.
"**/tests/**" = ["ARG001", "ARG002"]

# --- Static type checker -----------------------------------------------------
# ruff answers style questions; nothing was answering type questions, even though
# every signature in this codebase is annotated. The annotations were decoration.
#
# `files` covers every production and test root. `conftest.py` is the one thing
# excluded: the layer roots are separate sys.path entries rather than one package
# tree, so all six conftests are the module `conftest` and mypy refuses the
# duplicate before checking anything else. Excluding six fixture files to type-
# check the ~90 test modules behind them is the trade; giving the test trees
# `__init__.py` would fix it properly but would also break the deliberate
# namespace-package merge of the two `statements` directories.
[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
# The layers are separate roots on sys.path, not one package tree, so mypy needs
# the same map pytest gets from `pythonpath` above. A list, not a ":"-joined
# string: the separator is OS-specific and CI is Linux while development is not.
mypy_path = [
    "domain/src",
    "usecase/src",
    "adapters/rest/src",
    "adapters/db/src",
    "adapters/security/src",
    "adapters/generation_provider/src",
    "adapters/oauth_provider/src",
    "application/src/app",
    "domain/tests",
    "usecase/tests",
    "adapters/db/tests",
    "adapters/rest/tests",
    "adapters/security/tests",
    "adapters/generation_provider/tests",
    "adapters/oauth_provider/tests",
    "application/tests",
]
files = [
    "domain/src",
    "usecase/src",
    "adapters/rest/src",
    "adapters/db/src",
    "adapters/security/src",
    "adapters/generation_provider/src",
    "adapters/oauth_provider/src",
    "application/src",
    "domain/tests",
    "usecase/tests",
    "adapters/db/tests",
    "adapters/rest/tests",
    "adapters/security/tests",
    "adapters/generation_provider/tests",
    "adapters/oauth_provider/tests",
    "application/tests",
]
exclude = ['(^|/)conftest\.py$']
# Third-party packages without bundled stubs (asyncpg, nh3) would otherwise be
# 20 import errors drowning the 3 real ones.
ignore_missing_imports = true


[tool.ruff.lint.isort]
known-first-party = [
    "access",
    "auth",
    "container",
    "document",
    "dto",
    "error_handling",
    "fake",
    "generation",
    "gigachat_fixtures",
    "hashing",
    "model",
    "provider",
    "router",
    "sanitization",
    "security",
    "session",
    "shared",
    "statements",
    "tokens",
]
